check_output.txt
    Checking abyss v0.0.1 (/Users/alex/Documents/code/rust/skipper)
error[E0433]: failed to resolve: use of undeclared type `LargeFileAction`
    --> src/events.rs:1494:46
     |
1494 |              app.pending_large_action = Some(LargeFileAction::View);
     |                                              ^^^^^^^^^^^^^^^ use of undeclared type `LargeFileAction`
     |
help: consider importing this enum
     |
   1 + use crate::app::LargeFileAction;
     |

error[E0433]: failed to resolve: use of undeclared type `LargeFileAction`
    --> src/events.rs:1628:21
     |
1628 |                     LargeFileAction::View => {
     |                     ^^^^^^^^^^^^^^^ use of undeclared type `LargeFileAction`
     |
help: consider importing this enum
     |
   1 + use crate::app::LargeFileAction;
     |

error[E0433]: failed to resolve: use of undeclared type `LargeFileAction`
    --> src/events.rs:1634:21
     |
1634 |                     LargeFileAction::Edit => {
     |                     ^^^^^^^^^^^^^^^ use of undeclared type `LargeFileAction`
     |
help: consider importing this enum
     |
   1 + use crate::app::LargeFileAction;
     |

error[E0433]: failed to resolve: use of undeclared type `LargeFileAction`
    --> src/events.rs:1771:46
     |
1771 |              app.pending_large_action = Some(LargeFileAction::Edit);
     |                                              ^^^^^^^^^^^^^^^ use of undeclared type `LargeFileAction`
     |
help: consider importing this enum
     |
   1 + use crate::app::LargeFileAction;
     |

warning: unused import: `ConflictResolution`
  --> src/sync/engine.rs:12:57
   |
12 | use crate::sync::conflict::{Conflict, ConflictResolver, ConflictResolution, ConflictStrategy, FileInfo};
   |                                                         ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `anyhow::Result`
 --> src/sync/throttle.rs:5:5
  |
5 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^

warning: unused import: `Sender`
  --> src/sync/watcher.rs:10:42
   |
10 | use std::sync::mpsc::{channel, Receiver, Sender};
   |                                          ^^^^^^

warning: unused imports: `ConflictStrategy` and `Conflict`
  --> src/sync/mod.rs:14:20
   |
14 | pub use conflict::{Conflict, ConflictStrategy};
   |                    ^^^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused imports: `CompressedReader`, `CompressedWriter`, and `CompressionType`
  --> src/sync/mod.rs:15:23
   |
15 | pub use compression::{CompressionType, CompressedReader, CompressedWriter};
   |                       ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused import: `SyncStatus`
  --> src/sync/mod.rs:16:54
   |
16 | pub use engine::{SyncEngine, SyncConfig, SyncResult, SyncStatus, SyncAction, SyncMode, SyncProgress, SyncPhase};
   |                                                      ^^^^^^^^^^

warning: unused import: `exclude::ExcludePatterns`
  --> src/sync/mod.rs:17:9
   |
17 | pub use exclude::ExcludePatterns;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `FileHash`, `HashType`, `hash_bytes`, and `hash_file`
  --> src/sync/mod.rs:18:16
   |
18 | pub use hash::{HashType, FileHash, hash_file, hash_bytes};
   |                ^^^^^^^^  ^^^^^^^^  ^^^^^^^^^  ^^^^^^^^^^

warning: unused import: `throttle::BandwidthLimiter`
  --> src/sync/mod.rs:19:9
   |
19 | pub use throttle::BandwidthLimiter;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `FileWatcher` and `WatchEvent`
  --> src/sync/mod.rs:20:19
   |
20 | pub use watcher::{FileWatcher, WatchEvent};
   |                   ^^^^^^^^^^^  ^^^^^^^^^^

warning: unused imports: `Paragraph` and `Span`
 --> src/ui/pane.rs:4:18
  |
4 |     text::{Line, Span},
  |                  ^^^^
5 |     widgets::{Block, Borders, List, ListItem, ListState, Paragraph},
  |                                                          ^^^^^^^^^

warning: unused import: `render_popup`
 --> src/ui/mod.rs:5:45
  |
5 |     render_delete_confirm, render_help_bar, render_popup, 
  |                                             ^^^^^^^^^^^^

warning: unused import: `Rect`
  --> src/main.rs:15:45
   |
15 |     layout::{Constraint, Direction, Layout, Rect},
   |                                             ^^^^

warning: unused import: `Pane`
  --> src/main.rs:22:90
   |
22 | use ui::{render_delete_confirm, render_help_bar, render_progress_bar, render_status_bar, Pane};
   |                                                                                          ^^^^

error[E0533]: expected unit struct, unit variant or constant, found struct variant `crate::fs::BackendType::S3`
    --> src/events.rs:1489:58
     |
1489 |         let is_remote = matches!(backend.backend_type(), crate::fs::BackendType::S3 | crate::fs::BackendType::GCS);
     |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^ not a unit struct, unit variant or constant
     |
help: the struct variant's fields are being ignored
     |
1489 |         let is_remote = matches!(backend.backend_type(), crate::fs::BackendType::S3 { bucket: _, region: _, provider: _ } | crate::fs::BackendType::GCS);
     |                                                                                     +++++++++++++++++++++++++++++++++++++

error[E0599]: no variant or associated item named `GCS` found for enum `BackendType` in the current scope
    --> src/events.rs:1489:111
     |
1489 |         let is_remote = matches!(backend.backend_type(), crate::fs::BackendType::S3 | crate::fs::BackendType::GCS);
     |                                                                                                               ^^^ variant or associated item not found in `BackendType`
     |
    ::: src/fs/backend.rs:9:1
     |
   9 | pub enum BackendType {
     | -------------------- variant or associated item `GCS` not found for this enum
     |
help: there is a variant with a similar name (notice the capitalization)
     |
1489 -         let is_remote = matches!(backend.backend_type(), crate::fs::BackendType::S3 | crate::fs::BackendType::GCS);
1489 +         let is_remote = matches!(backend.backend_type(), crate::fs::BackendType::S3 | crate::fs::BackendType::Gcs);
     |

error[E0533]: expected unit struct, unit variant or constant, found struct variant `crate::fs::BackendType::S3`
    --> src/events.rs:1759:58
     |
1759 |         let is_remote = matches!(backend.backend_type(), crate::fs::BackendType::S3 | crate::fs::BackendType::GCS);
     |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^ not a unit struct, unit variant or constant
     |
help: the struct variant's fields are being ignored
     |
1759 |         let is_remote = matches!(backend.backend_type(), crate::fs::BackendType::S3 { bucket: _, region: _, provider: _ } | crate::fs::BackendType::GCS);
     |                                                                                     +++++++++++++++++++++++++++++++++++++

error[E0599]: no variant or associated item named `GCS` found for enum `BackendType` in the current scope
    --> src/events.rs:1759:111
     |
1759 |         let is_remote = matches!(backend.backend_type(), crate::fs::BackendType::S3 | crate::fs::BackendType::GCS);
     |                                                                                                               ^^^ variant or associated item not found in `BackendType`
     |
    ::: src/fs/backend.rs:9:1
     |
   9 | pub enum BackendType {
     | -------------------- variant or associated item `GCS` not found for this enum
     |
help: there is a variant with a similar name (notice the capitalization)
     |
1759 -         let is_remote = matches!(backend.backend_type(), crate::fs::BackendType::S3 | crate::fs::BackendType::GCS);
1759 +         let is_remote = matches!(backend.backend_type(), crate::fs::BackendType::S3 | crate::fs::BackendType::Gcs);
     |

error[E0004]: non-exhaustive patterns: `AppMode::ConfirmLargeLoad` and `AppMode::EditorSearch` not covered
  --> src/ui/components.rs:32:11
   |
32 |     match app.mode {
   |           ^^^^^^^^ patterns `AppMode::ConfirmLargeLoad` and `AppMode::EditorSearch` not covered
   |
note: `AppMode` defined here
  --> src/app.rs:7:10
   |
 7 | pub enum AppMode {
   |          ^^^^^^^
...
21 |     ConfirmLargeLoad,    // Confirm loading large remote file
   |     ---------------- not covered
22 |     EditorSearch,        // Search text inside editor
   |     ------------ not covered
   = note: the matched value is of type `AppMode`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
155~         },
156+         AppMode::ConfirmLargeLoad | AppMode::EditorSearch => todo!()
   |

Some errors have detailed explanations: E0004, E0433, E0533, E0599.
For more information about an error, try `rustc --explain E0004`.
warning: `abyss` (bin "abyss") generated 14 warnings
error: could not compile `abyss` (bin "abyss") due to 9 previous errors; 14 warnings emitted
